# StarShift

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ReadMe.md  holding.py  pyproject.toml  tmp.py
docs/: api.md  api.py  config.md  decorators.md  legacy.md  quickstart.md
examples/: basic.py
legacy/0.0-1.x_alpha/: starshift-0.1.0-py3-none-any.whl
legacy/0.1-2.x_beta/: starshift-0.2.0-py3-none-any.whl  starshift-0.2.1-py3-none-any.whl  starshift-0.2.2-py3-none-any.whl  starshift-0.2.5-py3-none-any.whl
legacy/0.2.x_alpha/: starshift-0.2.3-py3-none-any.whl
legacy/0.2.x_beta/: starshift-0.2.4-py3-none-any.whl
legacy/0.3.x_beta/: starshift-0.3.0-py3-none-any.whl
legacy/0.4.x_beta/: starshift-0.4.0-py3-none-any.whl  starshift-0.4.1-py3-none-any.whl  starshift-0.4.2-py3-none-any.whl  starshift-0.4.3-py3-none-any.whl  starshift-0.4.4-py3-none-any.whl  starshift-0.4.5-py3-none-any.whl  starshift-0.4.6-py3-none-any.whl
legacy/0.5.x_beta/: starshift-0.5.0b0-py3-none-any.whl  starshift-0.5.1b0-py3-none-any.whl
src/starshift/: __init__.py  star_shift.py
test/: manual.py  stress.py  test_application_1.py  test_config.py  test_decorators.py  test_inheritence.py  test_nesting.py  test_repr.py  test_serialization.py  test_shift.py  test_shift_field.py  test_star_shift.py  test_types.py  test_utils.py  test_vals.py
