[project]
name = "starshift"
version = "0.3.0"
description = "A lightweight dict -> class validation layer"
authors = [{ name = "William Coker", email = "wdc23a@acu.edu" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "stress: marks a test as a stress test",
    "application: marks a test as a real-world example test"
]